tests/ui/issues/issue-51714.stderr
error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:6:13
   |
LL | / fn main() {
...  |
LL | |     |_: [_; return || {}]| {};
   | |             ^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:10:10
   |
LL | / fn main() {
...  |
LL | |     [(); return || {}];
   | |          ^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:14:10
   |
LL | / fn main() {
...  |
LL | |     [(); return |ice| {}];
   | |          ^^^^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:18:10
   |
LL | / fn main() {
...  |
LL | |     [(); return while let Some(n) = Some(0) {}];
   | |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0572`.
